# xorg__lib__libXevie

./: .cvsignore  .gitignore  COPYING  ChangeLog  Makefile.am  configure.ac
include/X11/extensions/: Xevie.h
man/: .gitignore  Makefile.am  Xevie.man
src/: .gitignore  Makefile.am  Xevie.c
